[package]
name = "hello-world-impl"
version = "0.1.0"
edition = "2024"

[dependencies]
ferris-says = "0.3.2"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:hello-world-impl"

[package.metadata.component.target]
path = "../greet/wit"
world = "hello-world"

[package.metadata.component.dependencies]
