[package]
name = "my-grep"
version = "0.1.0"
edition = "2024"

[package.metadata.component]
package = "component:my-grep"

[package.metadata.component.dependencies]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
